# mcp-hetzner

./: .env.example  .gitignore  README.md  pyproject.toml  schema.json
mcp_hetzner/: __init__.py  __main__.py  client.py  example.py  server.py
